--- a/src/domsum.html
+++ b/src/domsum.html
@@ -91,7 +91,7 @@
     <div class="flexbox-container">
       <div>
         <h1 loading="lazy" data-aos="fade-up" data-aos-duration="1000">DOM SUM</h1>
-        <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño y desarrollo web – 2021</h3>
+        <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño y desarrollo web front-end – 2021</h3>
         <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">Partiendo de un boilerplate moderno, se ha diseñado y desarrollado la página web DOM SUM, un pequeño portal
           de gastronomía en el que se explica detalladamente cómo cocinar platos típicos de todas las regiones de
           Tailandia. </p>
@@ -133,6 +133,28 @@
           </h1>
           <div class="container-recomendations">
 
+
+            <a href="feelfactory.html">
+              <div class="recomendations-object">
+                <img src="./assets/images/20.6.recomendation.jpg" alt="Feel Factory recomendation" data-aos="fade-right"
+                  data-aos-duration="1000">
+              </div>
+            </a>
+
+            <a href="flux.html">
+              <div class="recomendations-object">
+                <img src="./assets/images/20.7.recomendation.jpg" alt="Flux recomendation" data-aos="fade-right"
+                  data-aos-duration="1000">
+              </div>
+            </a>
+
+            <a href="radicaleslibres.html">
+              <div class="recomendations-object">
+                <img src="./assets/images/20.9.recomendation.jpg" alt="Radicales Libres recomendation"
+                data-aos="fade-right" data-aos-duration="1000">
+              </div>
+            </a>
+
             <a href="atarashii.html">
               <div class="recomendations-object">
                 <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation" data-aos="fade-right"
@@ -160,28 +182,6 @@
                   data-aos-duration="1000">
               </div>
             </a>
-
-            <a href="feelfactory.html">
-              <div class="recomendations-object">
-                <img src="./assets/images/20.6.recomendation.jpg" alt="Feel Factory recomendation" data-aos="fade-right"
-                  data-aos-duration="1000">
-              </div>
-            </a>
-
-            <a href="flux.html">
-              <div class="recomendations-object">
-                <img src="./assets/images/20.7.recomendation.jpg" alt="Flux recomendation" data-aos="fade-right"
-                  data-aos-duration="1000">
-              </div>
-            </a>
-
-            <a href="radicaleslibres.html">
-              <div class="recomendations-object">
-                <img src="./assets/images/20.9.recomendation.jpg" alt="Radicales Libres recomendation"
-                data-aos="fade-right" data-aos-duration="1000">
-              </div>
-            </a>
-
           </div>
         </section>
       </div>
