--- a/src/flux.html
+++ b/src/flux.html
@@ -93,15 +93,17 @@
         <h3 data-aos="fade-up" data-aos-duration="1000">Identidad corporativa – 2022</h3>
 
 
-        <p data-aos="fade-up" data-aos-duration="1000">Diseño de la identidad corporativa de <b>Flux</b>, un proyecto que empieza a tomar forma como una serie de
+        <p data-aos="fade-up" data-aos-duration="1000">Diseño de la identidad corporativa de <b>Flux</b>, un proyecto
+          que empieza a tomar forma como una serie de
           eventos musicales comisariados por Yugen Kala en la sala de conciertos Mondo Club (Vigo, Galicia).</p>
-        <p data-aos="fade-up" data-aos-duration="1000">Se trata de un proyecto de constante renacimiento en el que el cambio siempre está presente, que no descarta abrir
+        <p data-aos="fade-up" data-aos-duration="1000">Se trata de un proyecto de constante renacimiento en el que el
+          cambio siempre está presente, que no descarta abrir
           nuevos caminos y experiencias.</p>
 
         <div class="program" data-aos="fade-up" data-aos-duration="1000">
 
-          <img src="./assets/images/photoshop.png"  alt="Photoshop icon" loading="lazy">
-          <img src="./assets/images/illustrator.png"  alt="Illustrator icon" loading="lazy">
+          <img src="./assets/images/photoshop.png" alt="Photoshop icon" loading="lazy">
+          <img src="./assets/images/illustrator.png" alt="Illustrator icon" loading="lazy">
 
         </div>
       </div>
@@ -114,57 +116,64 @@
 
           <div class="flex-item"><img src="./assets/images/7.1.flux.png" alt="flux identidad corporativa" loading="lazy"
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-item2"><img src="./assets/images/7.2.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-item2"><img src="./assets/images/7.2.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.3.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
+              data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.4.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
+              data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.5.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
+              data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.6.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
+              data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.7.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
+              data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.8.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
+              data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/7.9.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.10.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.11.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.12.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.13.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.14.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.15.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.16.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.17.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.18.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.19.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.20.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/7.21.flux.png" alt="flux identidad corporativa" loading="lazy"
-            data-aos="fade-up" data-aos-duration="1000"></div>
+              data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.10.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.11.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.12.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.13.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.14.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.15.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.16.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.17.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.18.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.19.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.20.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/7.21.flux.png" alt="flux identidad corporativa"
+              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
 
         </div>
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam>
           </h1>
           <div class="container-recomendations">
+            <a href="radicaleslibres.html">
+              <div class="recomendations-object">
+                <img src="./assets/images/20.9.recomendation.jpg" alt="Radicales Libres recomendation"
+                  data-aos="fade-right" data-aos-duration="1000">
+              </div>
+            </a>
+
 
             <a href="atarashii.html">
               <div class="recomendations-object">
-                <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation" data-aos="fade-right"
-                  data-aos-duration="1000">
+                <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation"
+                  data-aos="fade-right" data-aos-duration="1000">
               </div>
             </a>
 
@@ -203,12 +212,6 @@
               </div>
             </a>
 
-            <a href="radicaleslibres.html">
-              <div class="recomendations-object">
-                <img src="./assets/images/20.9.recomendation.jpg" alt="Radicales Libres recomendation"
-                data-aos="fade-right" data-aos-duration="1000">
-              </div>
-            </a>
 
           </div>
         </section>
