--- a/src/postal.html
+++ b/src/postal.html
@@ -91,7 +91,7 @@
     <div class="flexbox-container">
       <div>
         <h1 loading="lazy" data-aos="fade-up" data-aos-duration="1000">POS TAL CUAL</h1>
-        <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño postal (concurso de postales) – 2022</h3>
+        <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño de postal (concurso de postales) – 2022</h3>
         <p loading="lazy" data-aos="fade-up" data-aos-duration="1000"><b>Pos Tal Cual</b> es un concurso de postales
           creado por la Facultad de Bellas Artes de Pontevedra en enero de 2022. La temática y la técnica eran totalmente
           libres y quienes resultaron ganadores recibieron como premio el formar parte de una exposición en Rumore Lounge Pub, un
@@ -124,27 +124,6 @@
           </h1>
           <div class="container-recomendations">
 
-            <a href="atarashii.html">
-              <div class="recomendations-object">
-                <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation"
-                  data-aos="fade-right" data-aos-duration="1000">
-              </div>
-            </a>
-
-            <a href="gig.html">
-              <div class="recomendations-object">
-                <img src="./assets/images/20.2.recomendation.jpg" alt="GIG recomendation" data-aos="fade-right"
-                  data-aos-duration="1000">
-              </div>
-            </a>
-
-            <a href="maow.html">
-              <div class="recomendations-object">
-                <img src="./assets/images/20.3.recomendation.jpg" alt="Maow recomendation" data-aos="fade-right"
-                  data-aos-duration="1000">
-              </div>
-            </a>
-
             <a href="domsum.html">
               <div class="recomendations-object">
                 <img src="./assets/images/20.5.recomendation.jpg" alt="Dom Sum recomendation" data-aos="fade-right"
@@ -170,6 +149,28 @@
               <div class="recomendations-object">
                 <img src="./assets/images/20.9.recomendation.jpg" alt="Radicales Libres recomendation"
                   data-aos="fade-right" data-aos-duration="1000">
+              </div>
+            </a>
+
+
+            <a href="atarashii.html">
+              <div class="recomendations-object">
+                <img src="./assets/images/20.1.recomendation.jpg" alt="Atarashii Gakko recomendation"
+                  data-aos="fade-right" data-aos-duration="1000">
+              </div>
+            </a>
+
+            <a href="gig.html">
+              <div class="recomendations-object">
+                <img src="./assets/images/20.2.recomendation.jpg" alt="GIG recomendation" data-aos="fade-right"
+                  data-aos-duration="1000">
+              </div>
+            </a>
+
+            <a href="maow.html">
+              <div class="recomendations-object">
+                <img src="./assets/images/20.3.recomendation.jpg" alt="Maow recomendation" data-aos="fade-right"
+                  data-aos-duration="1000">
               </div>
             </a>
 
