--- a/src/404.html
+++ b/src/404.html
@@ -81,7 +81,7 @@
         <div class="modal-dialog modal-dialog-centered">
           <div class="modal-content">
             <div class="modal-header modal-text-center">
-              <img src="/src/assets/images/socialemoji-sad.gif" alt="memoji" loading="lazy">
+              <img src="/src/assets/images/socialemoji-sad.gif" alt="memoji" >
             </div>
             <div class="modal-header modal-text-center">
               <p>Lo siento mucho,<br>se ha producido un error en la página</p>
