--- a/src/maow.html
+++ b/src/maow.html
@@ -89,13 +89,13 @@
     </article>
     <div class="flexbox-container">
       <div>
-        <h1 loading="lazy" data-aos="fade-up" data-aos-duration="1000">MAOW</h1>
-        <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño de app móvil – 2020</h3>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">En la actualidad, la sociedad ha avanzado hacia una mayor concienciación sobre la responsabilidad que supone
+        <h1  data-aos="fade-up" data-aos-duration="1000">MAOW</h1>
+        <h3  data-aos="fade-up" data-aos-duration="1000">Diseño de app móvil – 2020</h3>
+        <p  data-aos="fade-up" data-aos-duration="1000">En la actualidad, la sociedad ha avanzado hacia una mayor concienciación sobre la responsabilidad que supone
           convivir con un animal de compañía. Aun así, el abandono animal sigue siendo una práctica constante que genera
           un enorme sufrimiento para muchos animales.
         </p>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">
+        <p  data-aos="fade-up" data-aos-duration="1000">
           Es por ello, que he decidido crear una aplicación móvil que ayudase a prevenir el abandono y cubriese las
           necesidades de los dueños. Entre la multitud de funciones que ofrece, destaca la adopción, la acogida y la
           búsqueda de cuidadores. Además, las protectoras serán unas de las grandes beneficiadas, ya que el resto de
@@ -103,33 +103,33 @@
         </p>
 
         <p  data-aos="fade-up" data-aos-duration="1000" class="project-link">El presente proyecto corresponde a mi trabajo de fin de grado en diseño gráfico, para conocerlo en mayor profundidad puedes acceder a su <a href="./assets/images/tfg.pdf" download="Curriculum vitae" >memoria</a>.</p>
-        <div class="program" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
+        <div class="program"  data-aos="fade-up" data-aos-duration="1000">
 
-          <img src="./assets/images/figma.png" alt="Figma icon" loading="lazy">
-          <img src="./assets/images/illustrator.png" alt="Illustrator icon" loading="lazy">
+          <img src="./assets/images/figma.png" alt="Figma icon" >
+          <img src="./assets/images/illustrator.png" alt="Illustrator icon" >
 
         </div>
       </div>
       <div>
         <div class="flex-container">
-          <div class="flex-item"><img src="./assets/images/3.1.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-top"><img src="./assets/images/3.2.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.3.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.4.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.5.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.6.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.7.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.8.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.9.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.10.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.11.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.12.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.13.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.14.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.15.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.16.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.17.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/3.18.maow.png" alt="Maow Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.1.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-top"><img src="./assets/images/3.2.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.3.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.4.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.5.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.6.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.7.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.8.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.9.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.10.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.11.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.12.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.13.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.14.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.15.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.16.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.17.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/3.18.maow.png" alt="Maow Web"  data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam>
