--- a/src/postal.html
+++ b/src/postal.html
@@ -90,33 +90,33 @@
     </article>
     <div class="flexbox-container">
       <div>
-        <h1 loading="lazy" data-aos="fade-up" data-aos-duration="1000">POS TAL CUAL</h1>
-        <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño de postal (concurso de postales) – 2022</h3>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000"><b>Pos Tal Cual</b> es un concurso de postales
+        <h1  data-aos="fade-up" data-aos-duration="1000">POS TAL CUAL</h1>
+        <h3  data-aos="fade-up" data-aos-duration="1000">Diseño de postal (concurso de postales) – 2022</h3>
+        <p  data-aos="fade-up" data-aos-duration="1000"><b>Pos Tal Cual</b> es un concurso de postales
           creado por la Facultad de Bellas Artes de Pontevedra en enero de 2022. La temática y la técnica eran totalmente
           libres y quienes resultaron ganadores recibieron como premio el formar parte de una exposición en Rumore Lounge Pub, un
           restaurante situado en Pontevedra.
         </p>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">En mi caso, he presentado las siguientes
+        <p  data-aos="fade-up" data-aos-duration="1000">En mi caso, he presentado las siguientes
           candidaturas:</p>
-        <div class="program" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
-          <img src="./assets/images/photoshop.png" alt="Photoshop icon" loading="lazy">
-          <img src="./assets/images/illustrator.png" alt="Illustrator icon" loading="lazy">
+        <div class="program"  data-aos="fade-up" data-aos-duration="1000">
+          <img src="./assets/images/photoshop.png" alt="Photoshop icon" >
+          <img src="./assets/images/illustrator.png" alt="Illustrator icon" >
         </div>
       </div>
       <div>
         <div class="flex-container">
-          <div class="flex-item flex-pc"><img src="./assets/images/4.1.postal.jpg" alt="Postal" loading="lazy"
+          <div class="flex-item flex-pc"><img src="./assets/images/4.1.postal.jpg" alt="Postal" 
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.2.postal.jpg" alt="Postal" loading="lazy"
+          <div class="flex-item flex-pc"><img src="./assets/images/4.2.postal.jpg" alt="Postal" 
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.3.postal.jpg" alt="Postal" loading="lazy"
+          <div class="flex-item flex-pc"><img src="./assets/images/4.3.postal.jpg" alt="Postal" 
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.4.postal.jpg" alt="Postal" loading="lazy"
+          <div class="flex-item flex-pc"><img src="./assets/images/4.4.postal.jpg" alt="Postal" 
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.5.postal.jpg" alt="Postal" loading="lazy"
+          <div class="flex-item flex-pc"><img src="./assets/images/4.5.postal.jpg" alt="Postal" 
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-pc"><img src="./assets/images/4.6.postal.jpg" alt="Postal" loading="lazy"
+          <div class="flex-item flex-pc"><img src="./assets/images/4.6.postal.jpg" alt="Postal" 
               data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
         <section class="recomendations-recipe">
