--- a/src/radicaleslibres.html
+++ b/src/radicaleslibres.html
@@ -104,47 +104,47 @@
           contacto directo con los receptores.</p>
         <div class="program" data-aos="fade-up" data-aos-duration="1000">
 
-          <img src="./assets/images/photoshop.png" alt="Photoshop icon" loading="lazy">
-          <img src="./assets/images/illustrator.png" alt="Illustrator icon" loading="lazy">
+          <img src="./assets/images/photoshop.png" alt="Photoshop icon" >
+          <img src="./assets/images/illustrator.png" alt="Illustrator icon" >
 
         </div>
       </div>
       <div>
         <div class="flex-container">
           <div class="flex-item flex-cartel"><img src="./assets/images/9.1.radicales-libres.jpg" alt="Radicales Libres"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-cartel flex-item2"><img src="./assets/images/9.2.radicales-libres.jpg"
-              alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="Radicales Libres"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-instagram insta-1">
-            <img src="./assets/images/9.3.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/9.3.radicales-libres.jpg" alt="Radicales Libres"  data-aos="fade-up"
               data-aos-duration="1000">
-            <img src="./assets/images/9.4.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/9.4.radicales-libres.jpg" alt="Radicales Libres"  data-aos="fade-up"
               data-aos-duration="1000">
           </div>
           <div class="flex-item flex-instagram insta-2">
-            <img src="./assets/images/9.7.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/9.7.radicales-libres.jpg" alt="Radicales Libres"  data-aos="fade-up"
               data-aos-duration="1000">
-            <img src="./assets/images/9.6.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/9.6.radicales-libres.jpg" alt="Radicales Libres"  data-aos="fade-up"
               data-aos-duration="1000">
           </div>
           <div class="flex-item flex-instagram insta-3">
-            <img src="./assets/images/9.8.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/9.8.radicales-libres.jpg" alt="Radicales Libres"  data-aos="fade-up"
               data-aos-duration="1000">
-            <img src="./assets/images/9.9.radicales-libres.jpg" alt="Radicales Libres" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/9.9.radicales-libres.jpg" alt="Radicales Libres"  data-aos="fade-up"
               data-aos-duration="1000">
           </div>
           <div class="flex-item"><img src="./assets/images/9.10.radicales-libres.png" alt="Radicales Libres"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item"><img src="./assets/images/9.11.radicales-libres.png" alt="Radicales Libres"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-none"><img src="./assets/images/9.12.radicales-libres.png" alt="Radicales Libres"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-poster"><img src="./assets/images/9.13.radicales-libres.jpg"
-              alt="Radicales Libres" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="Radicales Libres"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-merch"><img src="./assets/images/9.14.radicales-libres.jpg" alt="Radicales Libres"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item  flex-merch"><img src="./assets/images/9.15.radicales-libres.jpg" alt="Radicales Libres"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam>
