--- a/src/feelfactory.html
+++ b/src/feelfactory.html
@@ -101,64 +101,64 @@
         </p>
         <div class="program" data-aos="fade-up" data-aos-duration="1000">
 
-          <img src="./assets/images/photoshop.png" alt="Photoshop icon" loading="lazy">
-          <img src="./assets/images/illustrator.png" alt="Illustrator icon" loading="lazy">
-          <img src="./assets/images/figma.png"  alt="Figma icon" loading="lazy">
+          <img src="./assets/images/photoshop.png" alt="Photoshop icon" >
+          <img src="./assets/images/illustrator.png" alt="Illustrator icon" >
+          <img src="./assets/images/figma.png"  alt="Figma icon" >
         </div>
       </div>
       <div>
         <div class="flex-container">
 
           <div class="flex-item flex-cartel-2"><img src="./assets/images/6.1.feel-factory.jpg" alt="feel factory"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-cartel-2 flex-item3"><img src="./assets/images/6.2.feel-factory.jpg"
-              alt="feel factory" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="feel factory"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-cartel-2"><img src="./assets/images/6.3.feel-factory.jpg" alt="feel factory"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-cartel-2"><img src="./assets/images/6.4.feel-factory.jpg" alt="feel factory"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-icons">
-            <img src="./assets/images/6.5.feel-factory.jpg" alt="feel factory" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/6.5.feel-factory.jpg" alt="feel factory"  data-aos="fade-up"
               data-aos-duration="1000">
-            <img src="./assets/images/6.9.feel-factory.jpg" alt="feel factory" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/6.9.feel-factory.jpg" alt="feel factory"  data-aos="fade-up"
               data-aos-duration="1000">
           </div>
           <div class="flex-item flex-icons">
-            <img src="./assets/images/6.6.feel-factory.jpg" alt="feel factory" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/6.6.feel-factory.jpg" alt="feel factory"  data-aos="fade-up"
               data-aos-duration="1000">
-            <img src="./assets/images/6.10.feel-factory.jpg" alt="feel factory" loading="lazy" data-aos="fade-up"
-              data-aos-duration="1000">
-          </div>
-          <div class="flex-item flex-icons">
-            <img src="./assets/images/6.7.feel-factory.jpg" alt="feel factory" loading="lazy" data-aos="fade-up"
-              data-aos-duration="1000">
-            <img src="./assets/images/6.11.feel-factory.jpg" alt="feel factory" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/6.10.feel-factory.jpg" alt="feel factory"  data-aos="fade-up"
               data-aos-duration="1000">
           </div>
           <div class="flex-item flex-icons">
-            <img src="./assets/images/6.8.feel-factory.jpg" alt="feel factory" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/6.7.feel-factory.jpg" alt="feel factory"  data-aos="fade-up"
               data-aos-duration="1000">
-            <img src="./assets/images/6.12.feel-factory.jpg" alt="feel factory" loading="lazy" data-aos="fade-up"
+            <img src="./assets/images/6.11.feel-factory.jpg" alt="feel factory"  data-aos="fade-up"
+              data-aos-duration="1000">
+          </div>
+          <div class="flex-item flex-icons">
+            <img src="./assets/images/6.8.feel-factory.jpg" alt="feel factory"  data-aos="fade-up"
+              data-aos-duration="1000">
+            <img src="./assets/images/6.12.feel-factory.jpg" alt="feel factory"  data-aos="fade-up"
               data-aos-duration="1000">
           </div>
           <div class="flex-item flex-none"><img src="./assets/images/6.13.feel-factory.png" alt="feel factory"
-              loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/6.14.feel-factory.png" alt="feel factory" loading="lazy"
+               data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/6.14.feel-factory.png" alt="feel factory" 
               data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/6.15.feel-factory.png" alt="feel factory" loading="lazy"
+          <div class="flex-item"><img src="./assets/images/6.15.feel-factory.png" alt="feel factory" 
               data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet tablet-5 tablet-6 "><img src="./assets/images/6.16.feel-factory.png"
-              alt="feel factory" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="feel factory"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet tablet-5 tablet-6"><img src="./assets/images/6.17.feel-factory.png"
-              alt="feel factory" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="feel factory"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet tablet-5 tablet-6"><img src="./assets/images/6.18.feel-factory.png"
-              alt="feel factory" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="feel factory"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet tablet-5 tablet-6"><img src="./assets/images/6.19.feel-factory.jpg"
-              alt="feel factory" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="feel factory"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet tablet-5"><img src="./assets/images/6.20.feel-factory.jpg"
-              alt="feel factory" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="feel factory"  data-aos="fade-up" data-aos-duration="1000"></div>
           <div class="flex-item flex-tablet tablet-5"><img src="./assets/images/6.21.feel-factory.jpg"
-              alt="feel factory" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+              alt="feel factory"  data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
 
         <section class="recomendations-recipe">
