--- a/src/gig.html
+++ b/src/gig.html
@@ -89,35 +89,35 @@
     </article>
     <div class="flexbox-container">
       <div>
-        <h1 loading="lazy" data-aos="fade-up" data-aos-duration="1000">GIG</h1>
-        <h3 loading="lazy" data-aos="fade-up" data-aos-duration="1000">Diseño de app móvil – 2020</h3>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000">El confinamiento ha provocado la cancelación de numerosos conciertos, lo que ha generado que los músicos
+        <h1  data-aos="fade-up" data-aos-duration="1000">GIG</h1>
+        <h3  data-aos="fade-up" data-aos-duration="1000">Diseño de app móvil – 2020</h3>
+        <p  data-aos="fade-up" data-aos-duration="1000">El confinamiento ha provocado la cancelación de numerosos conciertos, lo que ha generado que los músicos
           comenzaran a ofrecer espectáculos gratuitos en directo por redes sociales, donde primaba la pasión y no la
           calidad técnica.</p>
-        <p loading="lazy" data-aos="fade-up" data-aos-duration="1000"> GIG es una plataforma de e-commerce de proximidad donde los artistas locales pueden retransmitir sus
+        <p  data-aos="fade-up" data-aos-duration="1000"> GIG es una plataforma de e-commerce de proximidad donde los artistas locales pueden retransmitir sus
           conciertos en directo a cambio del pago de una entrada virtual. Una alternativa a las redes sociales o
           videollamadas no monetizables, con herramientas específicas para gestionar conciertos online. Con esto no
           se pretende emular la esencia de un concierto en directo, sino crear nuevas experiencias y modos de consumo.
         </p>
-        <div class="program" loading="lazy" data-aos="fade-up" data-aos-duration="1000">
-          <img src="./assets/images/figma.png" alt="Figma icon" loading="lazy">
-          <img src="./assets/images/illustrator.png"  alt="Illustrator icon" loading="lazy">
+        <div class="program"  data-aos="fade-up" data-aos-duration="1000">
+          <img src="./assets/images/figma.png" alt="Figma icon" >
+          <img src="./assets/images/illustrator.png"  alt="Illustrator icon" >
         </div>
       </div>
       <div>
         <div class="flex-container">
-          <div class="flex-item"><img src="./assets/images/2.1.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item flex-top"><img src="./assets/images/2.2.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.3.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.4.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.5.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.6.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.7.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.8.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.9.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.10.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.11.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
-          <div class="flex-item"><img src="./assets/images/2.12.gig.png" alt="GIG Web" loading="lazy" data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.1.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item flex-top"><img src="./assets/images/2.2.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.3.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.4.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.5.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.6.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.7.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.8.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.9.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.10.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.11.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
+          <div class="flex-item"><img src="./assets/images/2.12.gig.png" alt="GIG Web"  data-aos="fade-up" data-aos-duration="1000"></div>
         </div>
         <section class="recomendations-recipe">
           <h1>Descubre más proyectos<spam> de diseño gráfico y web</spam>
